Added Ball, ChiliMath, SpawnPoint and changed some shit

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -139,10 +139,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChiliException.h" />
+    <ClInclude Include="ChiliMath.h" />
     <ClInclude Include="ChiliWin.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="COMInitializer.h" />
@@ -166,6 +168,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
+    <ClInclude Include="SpawnPoint.h" />
     <ClInclude Include="SpriteEffect.h" />
     <ClInclude Include="Star.h" />
     <ClInclude Include="Surface.h" />
